--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-    <link rel="stylesheet" href="//chayns-res.tobit.com/api/v3.1/css/chayns.css">
+    <link rel="stylesheet" href="//chayns-res.tobit.com/api/v3.1/css/chayns.min.css"/>
 
     <title>React</title>
 </head>
@@ -11,8 +11,7 @@
 
 <div id="app"></div>
 
-<script src="//chayns-res.tobit.com/api/v3.1/js/chayns.js"></script>
-<script src="app.bundle.js"></script>
+<script src="//chayns-res.tobit.com/api/v3.1/js/chayns.min.js"></script>
 
 </body>
 </html>
